# game-of-life

./: .eslintrc.json  .gitignore  .swcrc  .yarnrc.yml  next.config.js  package.json  tsconfig.build.json  tsconfig.json  webpack.common.ts
.github/workflows/: nextjs.yml
app/: GreetButton.tsx  Universe.tsx  page.tsx
demo/: .eslintrc.json  declaration.d.ts  next.config.js  package.json
demo/app/: Universe.tsx  globals.css  page.tsx
demo/app/test/: GameOfLife.tsx  page.tsx
demo/hooks/: useWasmModule.ts
hooks/: useQuery.ts  useWasmModule.ts
src/: game-of-life.ts  index.ts  state-machine.ts  utils.ts
src/components/: game-of-life.ts
tests/: state-machine.test.ts
wasm/: Cargo.toml
wasm/src/: binary_query.rs  binary_tree.rs  lib.rs  quadtree.rs  universe.rs  universe_style.rs  update_list.rs  utils.rs  xy_generator.rs
wasm/src/quadtree/: area.rs  binary_square.rs  division.rs  global_node.rs  iter.rs  node.rs  point.rs  quarter.rs  query.rs  square_node.rs  tree.rs  utils.rs
wasm/src/traits/: overlap.rs
