[package]
name = "wasm"
description = "Game of life wasm module"
version = "0.1.0"
authors = ["julien.capellari@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.86"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
lto = true
