[package]
name = "wasm"
description = "Game of life wasm module"
version = "0.1.0"
authors = ["julien.capellari@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
nalgebra = "0.32.2"
pythagore = { version = "0.4.1", features = ["wasm-vector"] }
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d"] }

[profile.release]
lto = true
