[package]
name = "wasm"
description = "Game of life wasm module"
version = "0.1.0"
authors = ["julien.capellari@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "quadtree"]
binary-tree = []
quadtree = []

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
nalgebra = "0.32.2"
num-traits = "0.2.15"
pythagore = { version = "0.8.0", features = ["wasm-vector-int", "wasm-point-int"] }
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "console"] }

[profile.release]
lto = true
